# ScoreDiff

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  redis.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: audio_conversion_service.py  diff_service.py  omr_service.py  pitch_service.py  playback_service.py  polyphonic_service.py  real_scoring_service.py  recording_service.py  rhythm_service.py  score_parser.py  scoring_service.py  services.py
backend/tests/: test_conversion_and_score_edit.py  test_integration.py  test_midi_upload.py  test_omr.py  test_pitch.py  test_polyphonic.py  test_real_scoring.py  test_rhythm.py  test_score_metadata.py  test_segment_analysis.py  test_task_progress.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: diff-viewer.tsx  issue-panel.tsx  performance-history.tsx  playback-bar.tsx  practice-recorder.tsx  project-sidebar.tsx  score-viewer.tsx  task-progress-bar.tsx
frontend/src/lib/: api.ts
