[project]
name = "scorediff-backend"
version = "0.1.0"
description = "ScoreDiff - 个人小提琴智能练琴工具后端"
license = "AGPL-3.0-only"
requires-python = "==3.10.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fakeredis>=2.20",
    "aiofiles>=24.0",
    "numpy>=1.23,<2",
    "scipy>=1.12",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pretty_midi>=0.2",
    "music21>=9.0",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "pymupdf>=1.24",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
